--- a/styles/Navbar.module.css
+++ b/styles/Navbar.module.css
@@ -41,3 +41,28 @@
     font-size: 20px;
     font-weight: bold;
 }
+
+.list {
+   padding: 0;
+   display: flex;
+   align-items: center;
+   list-style: none;
+   color: #ffffff; 
+}
+
+.cart {
+    position: relative;
+}
+
+.counter {
+    position: absolute;
+    top: -10px;
+    right: -10px;
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    background-color: #ffffff;
+    padding: 3px;
+    display: flex;
+    align-items: center;
+}
